@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: rcalc.c,v 1.18 2005/06/02 04:47:27 greg Exp $";
+static const char RCSid[] = "$Id: rcalc.c,v 1.19 2005/06/14 01:25:02 greg Exp $";
 #endif
 /*
  *  rcalc.c - record calculator program.
@@ -646,9 +646,12 @@ getrec(void)				/* get next record from file */
 	register struct field  *f;
 
 	while (ipb.chr != EOF) {
-		if (blnkeq)             /* beware of nbsynch() */
+		if (blnkeq) {		/* beware of nbsynch() */
 			while (isblnk(ipb.chr))
 				resetinp();
+			if (ipb.chr == EOF)
+				return(0);
+		}
 		eatline = (!igneol && ipb.chr != '\n');
 		clearrec();		/* start with fresh record */
 		for (f = inpfmt; f != NULL; f = f->next)
